<resources>
    <string name="app_name">SunnyNet</string>
    <string name="title_dashboard">代理配置</string>
    <string name="title_home">证书安装</string>
    <string name="title_notifications">关于</string>

    <string name="save">保存</string>
    <string name="search_menu_title">Search</string>


    <string name="status_bar_notification_info_overflow">999+</string>

    <string name="udp_in_tcp">UDP relay over TCP(将UDP封装在TCP中传输)</string>
    <string name="control_disable">停止</string>
    <string name="control_enable">启动</string>
    <string name="dns_ipv4">DNS IPv4:</string>
    <string name="dns_ipv6">DNS IPv6:</string>
    <string name="apps">指定APP</string>
    <string name="global">全局代理</string>

    <string name="ipv4">IPv4</string>
    <string name="ipv6">IPv6</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="nav_app_bar_navigate_up_description">Navigate up</string>
    <string name="nav_app_bar_open_drawer_description">Open navigation drawer</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>


</resources>
