<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="2dp"
        android:visibility="gone"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textStyle="bold"
            android:visibility="gone">

            <CheckBox
                android:id="@+id/ipv4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ipv4"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/ipv6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ipv6"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/global"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/global"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/xitong"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="指定APP不显示系统APP"
                android:textStyle="bold" />

            <Button
                android:id="@+id/apps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/apps"
                android:textStyle="bold" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/udp_in_tcp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/udp_in_tcp"
            android:textStyle="bold"
            android:visibility="gone" />







        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"

            android:singleLine="true"
            android:text="@string/dns_ipv4"
            android:textStyle="bold"
            android:visibility="gone" />

        <EditText
            android:id="@+id/dns_ipv4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789."
            android:singleLine="true"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:singleLine="true"
            android:text="@string/dns_ipv6"
            android:textStyle="bold"
            android:visibility="gone" />

        <EditText
            android:id="@+id/dns_ipv6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789abcdef:"
            android:singleLine="true"
            android:textStyle="bold"
            android:visibility="gone" />
    </LinearLayout>


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="28dp"
            android:paddingTop="72dp"
            android:paddingEnd="28dp"
            android:paddingBottom="32dp">

            <TextView
                android:id="@+id/bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="88dp"
                android:text="星智云转发"
                android:textSize="32sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="服务器地址："
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edit_ip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal|text"
                    android:minHeight="48dp"
                    android:singleLine="true"
                    android:text="192.168.31.154"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="服务器端口："
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edit_port"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:singleLine="true"
                    android:text="2024"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="服务器用户："
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edit_user"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="请输入用户名(可以留空)"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="72dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="服务器密码："
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edit_pwd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="请输入密码(可以留空)"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_marginEnd="24dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/xingzhi_cloud_logo" />

                <LinearLayout
                    android:layout_width="132dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/control"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="启动" />

                    <Button
                        android:id="@+id/zhenshu"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:text="安装证书" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
